tests/cases/control-flow/ok/while-true-if-false-break-noreturn.ari
fn main() -> i64 {
  while true {
    if false {
      break;
    }
    continue;
  }
}
