tests/cases/control-flow/errors/if-expression-type-mismatch.ari
fn main() -> i64 {
  let value = if true { 1 } else { false };
  return value;
}
